# Deepi

./: README.md  pyproject.toml
src/deepi/: __init__.py
src/deepi/model/: __init__.py  base.py  base_old.py  model.py
src/deepi/modules/: __init__.py  base.py  core.py
src/deepi/optimization/: __init__.py
tests/model/: test_model.py
tests/modules/: test_base.py  test_core.py
tests/modules/activation/: test_base.py  test_celu.py  test_elu.py  test_gelu.py  test_glu.py  test_leaky_relu.py  test_log_softmax.py  test_relu.py  test_relu6.py  test_selu.py  test_sigmoid.py  test_silu.py  test_softmax.py  test_swish.py  test_tanh.py
tests/modules/activations/: test_core.py
tests/modules/flow/: test_add.py  test_base.py  test_concatenate.py  test_core.py  test_flatten.py  test_input.py  test_reshape.py
tests/modules/initialization/: test_base.py  test_core.py  test_kaiming_normal.py  test_kaiming_uniform.py  test_normal.py  test_orthogonal.py  test_uniform.py  test_utils.py  test_xavier_normal.py  test_xavier_uniform.py
tests/modules/linear/: test_base.py  test_core.py  test_dense.py  test_low_rank.py
tests/modules/loss/: test_base.py  test_cross_entropy.py  test_elastic_net.py  test_huber.py  test_kl_div.py  test_mae.py  test_mse.py  test_nll.py  test_rmse.py
tests/modules/losses/: test_core.py
tests/optimization/optimizers/: test_adadelta.py  test_adagrad.py  test_adam.py  test_adamax.py  test_base.py  test_muon.py  test_n_adam.py  test_r_prop.py  test_radam.py  test_rms_prop.py  test_rprop.py  test_sgd.py
tests/optimization/regularization/: test_l1.py  (+3 more)
(+101 files in other folders)
