[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepi"
version = "0.1.0"
description = "Deepi package"
authors = [
    { name="davedleo" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deepi = ["*"]
